--- a/index.html
+++ b/index.html
@@ -36,6 +36,13 @@
         // Create a new GraphicsLayer
         const graphicsLayer = new GraphicsLayer(); // Create a new graphics layer
         map.add(graphicsLayer); // Add it to the map
+
+        const point = { //Create a point  
+          type: "point",  
+          longitude: -97.750689,    //long lat of Stevie Ray Vaughan Statue
+          latitude: 30.263098
+        };
+
     });
   </script>
 
