Add cross-shaped marker style to point graphic

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
             color: [255, 255, 255], // White  
             width: 1
           }  
+          style: "cross" // Shape of the marker
         };
 
         const pointGraphic = new Graphic({  
