Update marker color and style in index.html

--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
           type: "simple-marker",  
           color: [0, 0, 139],  // Color of blues rock
           outline: {  
-            color: [255, 0, 0], // White  
+            color: [255, 255, 255], // White  
             width: 1
           },  
-          style: "cross" // Shape of the marker
+          style: "triangle" // Shape of the marker
         };
 
         const pointGraphic = new Graphic({  
