--- a/index.html
+++ b/index.html
@@ -20,8 +20,12 @@
       "esri/Graphic",  
       "esri/layers/GraphicsLayer",
       //adding in the module for the feature layers
-      "esri/layers/FeatureLayer"
-    ], function (esriConfig,Map, MapView, Graphic, GraphicsLayer, FeatureLayer) {
+      "esri/layers/FeatureLayer",
+
+      //adding editor widget
+      "esri/widgets/Editor"
+
+    ], function (esriConfig,Map, MapView, Graphic, GraphicsLayer, FeatureLayer, Editor) {
 
       esriConfig.apiKey = "AAPK7376aa81e19047f49d515b880359b35fORHl2lQWZpmaRrOaLHCMcxcMKqhisFhVF-IikMIsLi4VBigmgkhwqrJeNcJmX2dL";
       const map = new Map({
@@ -191,6 +195,32 @@ graphicsLayer.add(polygonGraphic);
       });
 
       map.add(airportLayer);
+
+      //adding the const for the feature layer
+      const myAirports = new FeatureLayer({
+      url: "https://services.arcgis.com/LBbVDC0hKPAnLRpO/arcgis/rest/services/My_Airport2/FeatureServer",
+      
+      //adding the popup here
+      outFields: ["AirportCode"],
+
+      });
+
+      //adding the feature layer to the map
+      map.add(myAirports);
+
+      // Set the point layer's LayerInfo
+      const pointInfos = {
+        layer: myAirports
+      }
+
+      // Begin Editor constructor
+      const editor = new Editor({
+        view: view,
+        layerInfos: [pointInfos]
+      }); // End Editor constructor
+
+      // Add the widget to the view
+      view.ui.add(editor, "top-right");
 
       });
   </script>
