last update 3 challenges

--- a/index.html
+++ b/index.html
@@ -210,7 +210,8 @@ graphicsLayer.add(polygonGraphic);
       style: "diamond",
       color: "green",  // change this to your desired color
       size: "8px",  // pixels
-    }
+    },
+    label: "AUS"
   },
         labelingInfo: [{
           labelExpressionInfo: {
